fix: fixed src ways

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <title>CV Yegor Marchenko</title>
 </head>
 
@@ -46,7 +46,7 @@
             </div>
           </div>
 
-          <img class="photo" src="/img/iegor_marchenko.jpg" alt="I'm with the ballon d'or">
+          <img class="photo" src="img/iegor_marchenko.jpg" alt="I'm with the ballon d'or">
       
       </div> 
 
@@ -106,7 +106,7 @@
       <div class="container">
         <h2>My work</h2>
       <p>Uber Progect</p>
-      <a target="_blank" href="http://yegormarch.github.io/uber/"><img class="uber" src="/img/uber.jpg" alt="my work uber"></a>
+      <a target="_blank" href="http://yegormarch.github.io/uber/"><img class="uber" src="img/uber.jpg" alt="my work uber"></a>
       </div>
     </section>
 
@@ -164,11 +164,11 @@
     <p>2022</p>
 
     <div class="git">
-      <div><img src="/img/github.svg" alt="github logo" class="git_logo"></div>
+      <div><img src="img/github.svg" alt="github logo" class="git_logo"></div>
       <div><a href="https://github.com/yegormarch" target="_blank" rel="noopener noreferrer" >My GitHub</a></div>
     </div>
 
-    <p><a href="http://rs.school/js/" target="_blank"><img src="/img/rs_school_js.svg" alt="RS school logo" class="rs_logo"></a></p>
+    <p><a href="http://rs.school/js/" target="_blank"><img src="img/rs_school_js.svg" alt="RS school logo" class="rs_logo"></a></p>
   </footer>
 </body>
 </html>
