--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
       <div class="git">
         <div>
-          <img src="/img/github.svg" alt="github logo" class="git_logo" />
+          <img src="img/github.svg" alt="github logo" class="git_logo" />
         </div>
         <div>
           <a
