--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <h2>My code</h2>
           <pre>
         <code class="scopes">
-          <span>.plus</span> {
-            <p class="blue">
+          <p>.plus</p> {
+            <span >
             margin-top: 110px;
             margin-left: 147px;
             width: 26px;
@@ -135,15 +135,15 @@
             display: -ms-flexbox;
             display: flex;
             border-radius: 100%
-            </p>
+            </span>
         }
-        <span>.plus img</span> {
-            <p class="blue">
+        <p>.plus img</p> {
+            <span>
             -webkit-box-pack: center;
             -ms-flex-pack: center;
             justify-content: center;
             text-align: center
-            </p>
+            </span>
         }
         </code>
       </pre>
