--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <h2>My code</h2>
           <pre>
         <code class="scopes">
-          <p>.plus</p> {
-            <span >
+          .plus {
+            
             margin-top: 110px;
             margin-left: 147px;
             width: 26px;
@@ -135,15 +135,13 @@
             display: -ms-flexbox;
             display: flex;
             border-radius: 100%
-            </span>
+            
         }
-        <p>.plus img</p> {
-            <span>
+        .plus img {
             -webkit-box-pack: center;
             -ms-flex-pack: center;
             justify-content: center;
             text-align: center
-            </span>
         }
         </code>
       </pre>
