--- a/index.html
+++ b/index.html
@@ -85,25 +85,27 @@
 
       <section class="skills" id="skills">
         <div class="container">
-          <div class="hard_skills">
-            <h2>Hard skills</h2>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>SASS</li>
-              <li>Botstrap</li>
-              <li>Git</li>
-            </ul>
-          </div>
-
-          <div class="soft_skills">
-            <h2>Soft skills</h2>
-            <ul>
-              <li>Purposeful</li>
-              <li>Fast learner</li>
-              <li>Communicative</li>
-              <li>Creative</li>
-            </ul>
+          <div class="wrapper_skills">
+            <div class="hard_skills">
+              <h2>Hard skills</h2>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>SASS</li>
+                <li>Botstrap</li>
+                <li>Git</li>
+              </ul>
+            </div>
+  
+            <div class="soft_skills">
+              <h2>Soft skills</h2>
+              <ul>
+                <li>Purposeful</li>
+                <li>Fast learner</li>
+                <li>Communicative</li>
+                <li>Creative</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
