--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 
   <body>
-    <header>
+    <section class="promo">
       <div class="container">
         <div class="wrapper_h1">
-          <h1>Curriculum Vitae Iegor Marchenko</h1>
+          <header>
+            <h1>Curriculum Vitae Iegor Marchenko</h1>
+          </header>
         </div>
         <nav>
           <ul class="navigation">
@@ -52,7 +54,7 @@
           />
         </div>
       </div>
-    </header>
+    </section>
 
 
     <main>
